<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbarStyle="insideInset"
    tools:context=".MovieDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/movie_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/poster_label" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_original_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingLeft="16dp"
                        android:paddingBottom="6dp"
                        android:textSize="22sp"
                        android:textStyle="bold|italic"

                        />

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingLeft="16dp"
                        android:paddingBottom="28dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/movie_user_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:gravity="start"
                            android:paddingLeft="16dp"
                            android:textSize="40sp"
                            android:textStyle="italic" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@id/movie_user_rating"
                            android:paddingLeft="6dp"
                            android:paddingBottom="6dp"
                            android:src="@drawable/ic_star_black_24dp"
                            android:contentDescription="@string/star_label" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <LinearLayout
                android:id="@+id/movie_info_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_sentiment_satisfied_alt_24px"
                    android:contentDescription="@string/genres_label" />

                <TextView
                    android:id="@+id/movie_genres"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:padding="4dp"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_access_time_24px"
                    android:contentDescription="@string/duration_label" />

                <TextView
                    android:id="@+id/movie_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="fill_horizontal"
                android:padding="16dp"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <TextView
                android:id="@+id/videos_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="8dp"
                android:text="@string/videos_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/movie_info3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_info">

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <RelativeLayout
                android:id="@+id/videos_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line3">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/videosRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_background"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/videos_error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_background"
                    android:padding="12dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/videos_layout"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <TextView
                android:id="@+id/review_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line4"
                android:fontFamily="casual"
                android:padding="8dp"
                android:text="@string/reviews_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/review_label"
                android:background="@color/colorAccent"
                android:padding="12dp" />

            <TextView
                android:id="@+id/reviews_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/line5"
                android:background="@color/light_background"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_below="@id/line5"
                android:background="@color/light_background"
                android:padding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/reviewsRecyclerView"
                android:background="@color/colorAccent"
                android:padding="12dp" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/details_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/details_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp"
            android:textAlignment="center"
            android:textColor="?attr/colorError"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>